--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
 spring.jpa.show-sql=true
 
-server.port = 8090
+#server.port = 8090
